--- a/cgmap/templates/cgmap/index.html
+++ b/cgmap/templates/cgmap/index.html
@@ -62,12 +62,40 @@
             </div>
             <div class="depth-container scale-container">
                 <div class="scale-group">
-                    <div class="depth-scale-element-group depth-scale-element-group-hidden">
-                        <div class="depth-scale-element"></div>
-                        <div class="depth-scale-element"></div>
-                        <div class="depth-scale-element"></div>
-                        <div class="depth-scale-element"></div>
-                        <div class="depth-scale-element"></div>
+                    <div class="scale-element-group yellow">
+                        <div class="rectangle opacity075"></div>
+                        <div class="rectangle opacity05"></div>
+                        <div class="rectangle opacity025"></div>
+                        <div class="rectangle opacity015"></div>
+                        <div class="rectangle opacity0"></div>
+                    </div>
+                    <div class="scale-element-group orange_brown">
+                        <div class="rectangle opacity075"></div>
+                        <div class="rectangle opacity05"></div>
+                        <div class="rectangle opacity025"></div>
+                        <div class="rectangle opacity015"></div>
+                        <div class="rectangle opacity0"></div>
+                    </div>
+                    <div class="scale-element-group sand_brown">
+                        <div class="rectangle opacity075"></div>
+                        <div class="rectangle opacity05"></div>
+                        <div class="rectangle opacity025"></div>
+                        <div class="rectangle opacity015"></div>
+                        <div class="rectangle opacity0"></div>
+                    </div>
+                    <div class="scale-element-group brown">
+                        <div class="rectangle opacity075"></div>
+                        <div class="rectangle opacity05"></div>
+                        <div class="rectangle opacity025"></div>
+                        <div class="rectangle opacity015"></div>
+                        <div class="rectangle opacity0"></div>
+                    </div>
+                    <div class="scale-element-group dark_brown">
+                        <div class="rectangle opacity075"></div>
+                        <div class="rectangle opacity05"></div>
+                        <div class="rectangle opacity025"></div>
+                        <div class="rectangle opacity015"></div>
+                        <div class="rectangle opacity0"></div>
                     </div>
                 </div>
             </div>
@@ -80,7 +108,50 @@
                 </button>
             </div>
             <div class="temperature-container scale-container">
-                <div class="scale-group"></div>
+                <div class="scale-group">
+                    <div class="scale-element-group red">
+                        <div class="rectangle opacity0"></div>
+                        <div class="rectangle opacity015"></div>
+                        <div class="rectangle opacity025"></div>
+                        <div class="rectangle opacity05"></div>
+                        <div class="rectangle opacity075"></div>
+                    </div>
+                    <div class="scale-element-group orange">
+                        <div class="rectangle opacity0"></div>
+                        <div class="rectangle opacity015"></div>
+                        <div class="rectangle opacity025"></div>
+                        <div class="rectangle opacity05"></div>
+                        <div class="rectangle opacity075"></div>
+                    </div>
+                    <div class="scale-element-group yellow">
+                        <div class="rectangle opacity0"></div>
+                        <div class="rectangle opacity015"></div>
+                        <div class="rectangle opacity025"></div>
+                        <div class="rectangle opacity05"></div>
+                        <div class="rectangle opacity075"></div>
+                    </div>
+                    <div class="scale-element-group green">
+                        <div class="rectangle opacity0"></div>
+                        <div class="rectangle opacity015"></div>
+                        <div class="rectangle opacity025"></div>
+                        <div class="rectangle opacity05"></div>
+                        <div class="rectangle opacity075"></div>
+                    </div>
+                    <div class="scale-element-group blue">
+                        <div class="rectangle opacity075"></div>
+                        <div class="rectangle opacity05"></div>
+                        <div class="rectangle opacity025"></div>
+                        <div class="rectangle opacity015"></div>
+                        <div class="rectangle opacity0"></div>
+                    </div>
+                    <div class="scale-element-group purple">
+                        <div class="rectangle opacity075"></div>
+                        <div class="rectangle opacity05"></div>
+                        <div class="rectangle opacity025"></div>
+                        <div class="rectangle opacity015"></div>
+                        <div class="rectangle opacity0"></div>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="timeline-container">
