--- a/cgmap/static/cgmap/style.css
+++ b/cgmap/static/cgmap/style.css
@@ -35,70 +35,73 @@ html, body {
 /*************
 * Typography *
 *************/
-header1{
-    font-family: "Work Sans"
-    weight: bold
-    font-size: 64px
-    letter-spacing: -2%
+.header1{
+    font-family: "Work Sans", sans-serif;
+    font-weight: bold;
+    font-size: 64px;
+    letter-spacing: -2%;
 }
 
-header2{
-    font-family: "Work Sans"
-    weight: bold
-    font-size: 40px
-    letter-spacing: -2%
+.header2{
+    font-family: "Work Sans", sans-serif;
+    font-weight: bold;
+    font-size: 40px;
+    letter-spacing: -2%;
 }
 
-header3{
-    font-family: "Work Sans"
-    weight: bold
-    font-size: 24px
-    letter-spacing: -2%
+.header3{
+    font-family: "Work Sans", sans-serif;
+    font-weight: bold;
+    font-size: 24px;
+    letter-spacing: -2%;
 }
 
-default-text-large{
-    font-family: "Work Sans"
-    weight: medium
-    font-size: 24px
+.default-text-large{
+    font-family: "Work Sans", sans-serif;
+    font-weight: 500;
+    font-size: 24px;
 }
 
-default-text{
-    font-family: "Work Sans"
-    weight: Medium
-    font-size: 16px
-    line-height: 75px
-    line-height: 140%
+.default-text{
+    font-family: "Work Sans", sans-serif;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 75px;
+    line-height: 140%;
 }
 
-default-text-bold{
-    weight: bold
+.default-text-bold{
+    font-weight: bold;
 }
 
-default-text-small{
-    font-family: "Work Sans"
-    weight: medium
-    font-size: 14px
+.default-text-small{
+    font-family: "Work Sans", sans-serif;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 20px;
+    text-align: left;
+    vertical-align: middle;
 }
 
-pre-title{
-    font-family: "Work Sans"
-    weight: bold
-    font-size: 12px
-    letter-spacing: 3%
+.pre-title{
+    font-family: "Work Sans", sans-serif;
+    font-weight: bold;
+    font-size: 12px;
+    letter-spacing: 3%;
 }
 
-button-text{
-    font-family: "Work Sans"
-    font-style: bold
-    font-size: 16px
-    Letter Spacing: 3%
+.button-text{
+    font-family: "Work Sans", sans-serif;
+    font-style: bold;
+    font-size: 16px;
+    Letter Spacing: 3%;
 }
 
-ling-text{
-    font-family: "Work Sans"
-    weight: bold
-    font-size: 16px
-    decoration: underline
+.link-text{
+    font-family: "Work Sans", sans-serif;
+    font-weight: bold;
+    font-size: 16px;
+    decoration: underline;
 }
 
 
@@ -430,7 +433,6 @@ hr {
     flex: none;
     order: 0;
     flex-grow: 0;
-    margin: 0px 8px;
 
 }
 
@@ -456,6 +458,27 @@ hr {
     z-index: 1;
 
     background: #FFFFFF;
+}
+
+.scale-group-text {
+    position: static;
+    width: 16px;
+    height: 500px;
+    left: 8px;
+    top: 10px;
+    z-index: 2;
+
+    /* Accent */
+    border: 1px solid var(--accent);
+    box-sizing: border-box;
+    border-radius: 8px;
+
+    /* Inside Auto Layout */
+    flex: none;
+    order: 0;
+    flex-grow: 0;
+    margin: 0px 8px;
+
 }
 
 .temperature-container {
