--- a/cgmap/templates/cgmap/index.html
+++ b/cgmap/templates/cgmap/index.html
@@ -98,6 +98,9 @@
                         <div class="rectangle opacity0"></div>
                     </div>
                 </div>
+                <div class="scale-group-text">
+                    <span class="default-text-small">0 10 20 30 40 50 60 70 80 90 100 110 120 130 140 150 160 170 180 190 200 210 220 230 240</span>
+                </div>
             </div>
         </div>
         <div class="temperature-container right-transition" id="right-slider">
@@ -151,6 +154,9 @@
                         <div class="rectangle opacity015"></div>
                         <div class="rectangle opacity0"></div>
                     </div>
+                </div>
+                <div class="scale-group-text">
+                    <span class="default-text-small">38 36 34 32 30 28 26 24 22 20 18 16 14 12 10 8 6 4 2 0 -2 -4 -6 -8 -10 -12 -14 -16 -18 -20</span>
                 </div>
             </div>
         </div>
