wp008: last adjustments for db models version 1

--- a/cgmap/templates/cgmap/index.html
+++ b/cgmap/templates/cgmap/index.html
@@ -19,7 +19,7 @@
 {% block footer_javascript_page %}
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="{% static 'cgmap/map.js' %}"></script>
-    {# jquary for scale animation #}
+    {# jquery for scale animation #}
     <script>
         $('#depth-slider').on('click', function(){
             console.log( "Button depth-slider was clicked!" );
