--- a/cgmap/templates/header.html
+++ b/cgmap/templates/header.html
@@ -40,7 +40,7 @@
                 <span class="material-icons" aria-hidden="true">&#xE8B6;</span>
             </button>
             <div class="dropdown-menu dropdown-menu-lg-right" aria-labelledby="dropdownMenuSearch">
-                <form class="form-inline mt-2 mt-md-0">
+                <form class="form-inline mt-2 mt-md-0" action="" method="get">
                     <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
                     <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
                 </form>
