wp023 adding grid overlay interaction like turn on/off and mouse hover. Minor adjustments to db models and dropdown menu location

--- a/cgmap/static/cgmap/style.css
+++ b/cgmap/static/cgmap/style.css
@@ -241,7 +241,7 @@ hr {
 *************/
 #nav-menu {
     position: absolute;
-    right: 10px;
+    left: 50px;
     top: 10px;
     opacity: 0.8;
     z-index: 1;
