--- a/cgmap/templates/cgmap/index.html
+++ b/cgmap/templates/cgmap/index.html
@@ -22,10 +22,10 @@
     {# to get access from view in external js files #}
     {{grid_data|json_script:"grid_data"}}
     {{context|json_script:"context"}}
-    {#cg_data|json_script:"cg_data"#}
-    {#fd_data|json_script:"fd_data"#}
-    <script src="{% static 'cgmap/basemap.js' %}"></script>
+    {{cg_data|json_script:"cg_data"}}
+    {{fc_data|json_script:"fc_data"}}
     <script src="{% static 'cgmap/gridlayer.js' %}"></script>
+    <script src="{% static 'cgmap/basemap.js' %}"></script>
     <script type="text/Javascript">
         function isSelected(){
             results = document.querySelector
