--- a/cgmap/templates/header.html
+++ b/cgmap/templates/header.html
@@ -24,12 +24,12 @@
             </form>
         </div>
     </nav>-->
-    <div class="btn-group-vertical" role="group" aria-label="Navbar" id="nav-menu">
+    <div class="btn-group" role="group" aria-label="Navbar" id="nav-menu">
         <div class="dropdown">
             <button class="btn btn-secondary" type="button" id="dropdownMenu" data-toggle="dropdown" data-display="static"  aria-haspopup="true" aria-expanded="false">
                 <span class="material-icons" aria-hidden="true">&#xe5d2;</span>
             </button>
-            <div class="dropdown-menu dropdown-menu-lg-right" aria-labelledby="dropdownMenu">
+            <div class="dropdown-menu dropdown-menu-lg-left" aria-labelledby="dropdownMenu">
                 <button class="dropdown-item" type="button">First Item</button>
                 <button class="dropdown-item" type="button">Second Item</button>
                 <button class="dropdown-item" type="button">Third Item</button>
@@ -39,7 +39,7 @@
             <button class="btn btn-secondary" type="button" id="dropdownMenuSearch" data-toggle="dropdown" data-display="static" aria-haspopup="true" aria-expanded="false">
                 <span class="material-icons" aria-hidden="true">&#xE8B6;</span>
             </button>
-            <div class="dropdown-menu dropdown-menu-lg-right" aria-labelledby="dropdownMenuSearch">
+            <div class="dropdown-menu dropdown-menu-lg-left" aria-labelledby="dropdownMenuSearch">
                 <form class="form-inline mt-2 mt-md-0" action="" method="get">
                     <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
                     <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
